--- a/package.json
+++ b/package.json
@@ -4,11 +4,18 @@
   "description": "A to do list app. # To Do List ## Description",
   "main": "index.js",
   "scripts": {
+    "start": "webpack-dev-server --inline --hot",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "webpack": "^1.13.2"
+    "babel-core": "^6.14.0",
+    "babel-loader": "^6.2.5",
+    "babel-preset-es2015": "^6.14.0",
+    "pug": "^2.0.0-beta6",
+    "pug-loader": "^2.3.0",
+    "webpack": "^1.13.2",
+    "webpack-dev-server": "^1.15.1"
   }
 }
